hphp/hack/test/typecheck/references/strict_reference2.php.exp
File "strict_reference2.php", line 4, characters 14-16:
Cannot take a value by reference in strict mode. (Typing[4154])
